Update typeRoots in tsconfig.json to reference src/@types for improved type definitions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@/*": ["./*"],
       "src/*": ["../../src/*"]
     },
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
   "include": [
     "next-env.d.ts",
