Update dependencies in package-lock.json to version 4.40.0 for various Rollup modules, adjust moduleResolution in tsconfig.json to 'node', and add clean scripts in package.json for improved project maintenance.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "clean": "rm -rf .next node_modules .turbo out dist",
+    "clean:all": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
     "lamejs2": "^0.1.2",
