--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "incremental": true,
     "module": "esnext",
     "esModuleInterop": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -23,18 +23,15 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "src/*": ["../../src/*"]
+      "@/*": ["./*"]
     },
-    "typeRoots": ["./node_modules/@types", "./src/@types"]
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "../../src/**/*.ts",
-    "../../src/**/*.tsx",
     "types/**/*.d.ts"
   ],
   "exclude": [
