--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean:all": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
-    "lamejs2": "^0.1.2",
+    "lamejs": "^1.2.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +24,9 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
     "jsdom": "^26.0.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0",
